feat: add information

--- a/index.html
+++ b/index.html
@@ -40,6 +40,55 @@
                 <p class="my_name">Elizaveta Razumenko</p>
                 <p class="my_title">junior frontend developer</p>
             </div>
+            <section class="section">
+                <h2>Skills</h2>
+                <ul class="skills_wrapper">
+                    <li class="skill">HTML/HTML5</li>
+                    <li class="skill">React</li>
+                    <li class="skill">Figma</li>
+                    <li class="skill">CSS/CSS3</li>
+                    <li class="skill">Webpack</li>
+                    <li class="skill">Adobe Photoshop</li>
+                    <li class="skill">SASS</li>
+                    <li class="skill">BEM</li>
+                    <li class="skill">FSD</li>
+                    <li class="skill">JavaScript</li>
+                    <li class="skill">Git</li>
+                    <li class="skill">AJAX</li>
+                    <li class="skill">TypeScript</li>
+                    <li class="skill">fetch</li>
+                    <li class="skill">Unit tests</li>
+                </ul>
+            </section>
+            <section class="education_wrapper section">
+                <div>
+                    <h2>Education</h2>
+                    <p class="skill education university">Belarusian National Technical University</p>
+                    <p class="skill education">Speciality: Civil engineer</p>
+                </div>
+                <div class="english_wrapper">
+                    <h2>English level</h2>
+                    <p class="skill education university">B2 - C1</p>
+                </div>
+            </section>
+            <section class="education_wrapper section">
+                <div>
+                    <h2>Experience</h2>
+                    <ul>
+                        <li class="skill">Design of engineering systems (2020-2022)</li>
+                        <li class="skill">Preparation of documentation for tenders (2021)</li>
+                        <li class="skill">Сalculation of estimates (2022)</li>
+                        <li class="skill">JS WEB Applications design / development (2022- now)</li>
+                    </ul>
+                </div>
+                <div class="courses_wrapper">
+                    <h2>Courses</h2>
+                    <ul>
+                        <li class="skill">RSSchool: JS / Front-end</li>
+                        <li class="skill">RSSchool: React</li>
+                    </ul>
+                </div>
+            </section>
         </main>
     </div>
 </body>
