feat: add some information

--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
                     </ul>
                 </div>
             </section>
+            <section class="about-me_wrapper section">
+                    <h2>About me</h2>
+                    <p class="skill">I am one of those people who puts responsibility, integrity and accuracy first in all areas of my life. Hard work and discipline help me achieve any goals. </p>
+                    <ul>
+                        <li class="skill">a responsible, attentive and active person</li>
+                        <li class="skill">always happy to take on new and unusual work</li>
+                        <li class="skill">have excellent communication skills and easily fit into any team</li>
+                        <li class="skill">a punctual, collected and reliable person</li>
+                        <li class="skill">learn quickly, instantly remember information and apply it</li>
+                    </ul>
+            </section>
         </main>
     </div>
 </body>
