feat: add adaptive

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </section>
             <section class="about-me_wrapper section">
                     <h2>About me</h2>
-                    <p class="skill">I am one of those people who puts responsibility, integrity and accuracy first in all areas of my life. Hard work and discipline help me achieve any goals. </p>
+                    <p class="skill about_me">I am one of those people who puts responsibility, integrity and accuracy first in all areas of my life. Hard work and discipline help me achieve any goals. </p>
                     <ul>
                         <li class="skill">a responsible, attentive and active person</li>
                         <li class="skill">always happy to take on new and unusual work</li>
