--- a/index.html
+++ b/index.html
@@ -38,26 +38,31 @@
                     </div>
                 </div>
                 <p class="my_name">Elizaveta Razumenko</p>
-                <p class="my_title">junior frontend developer</p>
+                <p class="my_title">frontend developer</p>
             </div>
             <section class="section">
                 <h2>Skills</h2>
                 <ul class="skills_wrapper">
                     <li class="skill">HTML/HTML5</li>
-                    <li class="skill">React</li>
-                    <li class="skill">Figma</li>
+                    <li class="skill">Context API</li>
+                    <li class="skill">Angular CLI</li>
+                    <li class="skill">fetch, AJAX, GraphQL</li>
                     <li class="skill">CSS/CSS3</li>
-                    <li class="skill">Webpack</li>
-                    <li class="skill">Adobe Photoshop</li>
-                    <li class="skill">SASS</li>
+                    <li class="skill">Redux, Redux Tookit</li>
+                    <li class="skill">RxJS & Observables</li>
+                    <li class="skill">RTK Query</li>
+                    <li class="skill">SASS/SCSS</li>
+                    <li class="skill">React Hook Form</li>
+                    <li class="skill">NgRx, NgRx Effects</li>
+                    <li class="skill">Figma</li>
+                    <li class="skill">JavaScript, TypeScript</li>
+                    <li class="skill">Next JS</li>
+                    <li class="skill">Webpack, Vite</li>
+                    <li class="skill">Tests (Jest, Vitest, RTL)</li>
+                    <li class="skill">React</li>
+                    <li class="skill">SSR / SSG</li>
                     <li class="skill">BEM</li>
-                    <li class="skill">FSD</li>
-                    <li class="skill">JavaScript</li>
-                    <li class="skill">Git</li>
-                    <li class="skill">AJAX</li>
-                    <li class="skill">TypeScript</li>
-                    <li class="skill">fetch</li>
-                    <li class="skill">Unit tests</li>
+                    <li class="skill">Adobe Photoshop</li>
                 </ul>
             </section>
             <section class="education_wrapper section">
@@ -77,8 +82,7 @@
                     <ul>
                         <li class="skill">Design of engineering systems (2020-2022)</li>
                         <li class="skill">Preparation of documentation for tenders (2021)</li>
-                        <li class="skill">Сalculation of estimates (2022)</li>
-                        <li class="skill">JS WEB Applications design / development (2022- now)</li>
+                        <li class="skill">JS WEB Applications design / development (2021- now)</li>
                     </ul>
                 </div>
                 <div class="courses_wrapper">
@@ -86,6 +90,7 @@
                     <ul>
                         <li class="skill">RSSchool: JS / Front-end</li>
                         <li class="skill">RSSchool: React</li>
+                        <li class="skill">RSSchool: Angular</li>
                     </ul>
                 </div>
             </section>
